kubernetes/manifests/cabotage/goldfish/02-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: cabotage
  name: goldfish
  labels:
    app: goldfish
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: goldfish
    spec:
      serviceAccountName: goldfish
      containers:
        - name: cabotage-sidecar
          image: cabotage/sidecar:v1.0.0a1
          args:
            - "maintain"
          volumeMounts:
            - name: vault-secrets
              mountPath: /var/run/secrets/vault
        - name: goldfish
          image: cabotage/goldfish:v1.0.0a1
          command: ['goldfish']
          args:
            - "-config=/etc/goldfish/config.hcl"
            - "-nomad-token-file=/var/run/secrets/vault/vault-token"
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: goldfish-config
              mountPath: /etc/goldfish
            - name: vault-secrets
              mountPath: /var/run/secrets/vault
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              add:
              - IPC_LOCK
          readinessProbe:
            httpGet:
              port: 8000
              path: /#/
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: 8000
              path: /#/
              scheme: HTTPS
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: vault-secrets
          emptyDir:
            medium: "Memory"
            sizeLimit: "1M"
        - name: goldfish-config
          configMap:
            name: goldfish
