kubernetes/manifests/cabotage/goldfish/03-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: goldfish
  name: goldfish
  namespace: vault
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8000
  selector:
    app: goldfish
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
