kubernetes/manifests/cabotage/goldfish/goldfish-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: goldfish-external
  namespace: vault
  annotations:
    #kubernetes.io/tls-acme: "true"
    #kubernetes.io/ingress.class: "gce"
    #kubernetes.io/ingress.allow-http: "false"
    #kubernetes.io/ingress.global-static-ip-name: "gke-ernestd-test-cluster-vault-goldfish-external"
spec:
  tls:
  #- hosts:
  #  - goldfish-external.ernest.ly
  #  secretName: "goldfish-external-external-tls"
  rules:
  - host: goldfish-external.ernest.ly
    http:
      paths:
      - path: /*
        backend:
          serviceName: goldfish
          servicePort: 443
